--- a/beszel/site/src/locales/fr/fr.po
+++ b/beszel/site/src/locales/fr/fr.po
@@ -564,16 +564,12 @@ msgstr "Demande de réinitialisation du mot de passe reçue"
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Pause"
-msgstr ""
+msgstr "En pause"
 
 #: src/components/systems-table/systems-table.tsx
 #: src/components/systems-table/systems-table.tsx
 msgid "Paused"
 msgstr "En pause"
-
-#: src/components/systems-table/systems-table.tsx
-msgid "Pending"
-msgstr "En attente"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Please <0>configure an SMTP server</0> to ensure alerts are delivered."
